--- a/foundations/03-grouping-selectors/index.html
+++ b/foundations/03-grouping-selectors/index.html
@@ -7,8 +7,8 @@
   <title>Grouping Selectors</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <button>Click Me!</button>
-  <button>No, Click Me!</button>
+<body class="container">
+  <button class="click">Click Me!</button>
+  <button class="no-click">No, Click Me!</button>
 </body>
 </html>
